Applications/Unbound/base/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unbound
  labels:
    app.kubernetes.io/component: 'application'
  annotations:
    #reloader.stakater.com/auto: 'true' # Reloads workload when any referenced ConfigMap or Secret changes
    reloader.stakater.com/search: 'false' # Enables search mode (only reloads if matching secrets/configMaps are found)
    #configmap.reloader.stakater.com/auto: 'true' # Reloads only when referenced ConfigMap(s) change
    #configmap.reloader.stakater.com/reload: '' # Reloads when specific ConfigMap(s) change, regardless of how they're used
    #secret.reloader.stakater.com/auto: 'true' # Reloads only when referenced Secret(s) change
    #secret.reloader.stakater.com/reload: '' # Reloads when specific Secret(s) change, regardless of how they're used
    reloader.stakater.com/rollout-strategy: 'rollout' # Specifies the rollout strategy for the workload (rollout (default) / restart)
spec:
  revisionHistoryLimit: 3
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'application' # The component within the architecture
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: unbound
          image: mvance/unbound-rpi:0.0.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 0.1
              memory: 64Mi
            limits:
              cpu: 0.25
              memory: 256Mi
          ports:
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 53
              protocol: UDP
              name: dns-udp
          startupProbe:
            exec:
              command: ['drill', '@127.0.0.1', 'localhost']
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            exec:
              command: ['drill', '@127.0.0.1', 'localhost']
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ['drill', '@127.0.0.1', 'localhost']
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: unbound-configs
              mountPath: /opt/unbound/etc/unbound/unbound.conf
              subPath: unbound.conf
              readOnly: true
            - name: unbound-configs
              mountPath: /opt/unbound/etc/unbound/a-records.conf
              subPath: a-records.conf
              readOnly: true
            - name: unbound-configs
              mountPath: /opt/unbound/etc/unbound/forward-records.conf
              subPath: forward-records.conf
              readOnly: true
            - name: unbound-configs
              mountPath: /opt/unbound/etc/unbound/srv-records.conf
              subPath: srv-records.conf
              readOnly: true
      volumes:
        - name: unbound-configs
          configMap:
            name: unbound-configs
