Applications/Unbound/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unbound
  labels:
    app.kubernetes.io/component: 'application' # The component within the architecture
spec:
  selector:
    app.kubernetes.io/component: 'application' # The component within the architecture
  ports:
    - protocol: TCP
      port: 53
      targetPort: 53
      name: dns-tcp
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns-udp
  type: ClusterIP
